# emias_bot

./: .gitignore  Cargo.toml  go.mod  go.sum  main.go  pens.md
database/: database.go  entities.go
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
src/: helper.rs  main.rs
src/em_commands/: callback.rs  message.rs  mod.rs
src/entities/: info.rs  mod.rs  prelude.rs
src/parsable/: basic.rs  doctors.rs  mod.rs  referrals.rs
