[package]
name = "em_bot"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1 

[dependencies]
chrono = "0.4.38"
dotenv = "0.15.0"
lazy_static = "1.5.0"
log = "0.4.22"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.12.7", features = ["json"] }
sea-orm = { version = "1.0.1", features = ["sqlx-sqlite", "runtime-tokio-native-tls", "macros"] }
serde = { version = "1.0.210", features = ["derive"] }
teloxide = { version = "0.13.0", features = ["macros"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
